--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html lang="nb" dir="ltr">
 
-  </body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <!--linker css og script til html-->
+  <link rel="stylesheet" href="/css/Stylesheet.css">
+  <script src="/Scripts/javascript.js"></script>
+
+  <title>Folk</title>
+</head>
+
+<body>
+  <nav></nav>
+  <!--Delt de fire delene inn i individuelle div, med id og klasse-->
+  <div id="introduksjon" class="hidden">
+
+  </div>
+
+  <div id="oversikt" class="hidden">
+
+  </div>
+
+  <div id="detaljer" class="hidden">
+
+  </div>
+
+  <div id="sammenligning" class="hidden">
+
+  </div>
+</body>
+
 </html>
