--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,13 @@
 <html lang="nb" dir="ltr">
 
 <head>
+  <!--meta info som er standar, gir tilgang til veiwport og setter character sett-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <!--linker css og script til html-->
-  <link rel="stylesheet" href="/css/Stylesheet.css">
-  <script src="/Scripts/javascript.js"></script>
+  <link rel="stylesheet" href="C:\Users\bassb\Documents\GitHub\INFO134-eksamen/css/Stylesheet.css">
+  <script src="C:\Users\bassb\Documents\GitHub\INFO134-eksamen/Scripts/javascript.js"></script>
 
   <title>Folk</title>
 </head>
@@ -16,7 +17,7 @@
   <nav></nav>
   <!--Delt de fire delene inn i individuelle div, med id og klasse-->
   <div id="introduksjon" class="hidden">
-
+    <P>test</P>
   </div>
 
   <div id="oversikt" class="hidden">
