fikset stylsheet og script linkingen

--- a/Index.html
+++ b/Index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <!--linker css og script til html-->
-  <link rel="stylesheet" href="/css/Stylesheet.css">
-  <script src="/Scripts/javascript.js"></script>
+  <link rel="stylesheet" href="../INFO134-eksamen/css/Stylesheet.css">
+  <script src="../INFO134-eksamen/Scripts/javascript.js"></script>
 
   <title>Folk</title>
 </head>
