Forslag til vise/skjule divs

--- a/test2.html
+++ b/test2.html
@@ -22,9 +22,10 @@
 <script>
 
    
-        
 
-        //Funksjon 2
+
+
+        //Forslag 3
         window.onload = function() {
 
         var introDiv = document.getElementById('intro_tab');
@@ -47,7 +48,7 @@
 
 </script>
 
-<h2>Forslag 2</h2>
+<h2>Forslag 3</h2>
 
 <nav>
     <button id="intro">Introduksjon</button>
