--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
 <body onload="toggleDivs()">
   <!-- Knapper for navigering -->
   <nav>
-    <button id="intro_btn">Introduksjon</button>
-    <button id="oversikt_btn">Oversikt</button>
-    <button id="detalj_btn">Detaljer</button>
-    <button id="sammenlign_btn">Sammenligning</button>
+    <button onclick="introfunk()" id="intro_btn">Introduksjon</button>
+    <button onclick="oversiktfunk()" id="oversikt_btn">Oversikt</button>
+    <button onclick="detaljfunk()" id="detalj_btn">Detaljer</button>
+    <button onclick="sammenfunk()" id="sammenlign_btn">Sammenligning</button>
   </nav>
   <!--Delt de fire delene inn i individuelle div, med id og klasse-->
   <div id="introduksjon" class="hidden">
