fikset en liten feil

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
   <title>Folk</title>
 </head>
 
-<body onload="toggleDivs()">
+<body>
   <!-- Knapper for navigering -->
   <nav>
     <button onclick="introfunk()" id="intro_btn">Introduksjon</button>
