lager objecter men de er tomme

--- a/Befolkning_Redigert.html
+++ b/Befolkning_Redigert.html
@@ -26,7 +26,7 @@
 	this.getNames = function(){getNames()};
 	this.getIDs = function(){getIDs()};
 	this.load = function() {hentJSON(this.url,lagre_data)};//Sender inn lagre_data(call back) som en funksjon
-	
+	console.log("folkerkjørt");
 	}
 	
 	
