--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
   <!--linker css og script til html-->
   <link rel="stylesheet" href="../INFO134-eksamen/css/Stylesheet.css">
   <script src="../INFO134-eksamen/Scripts/javascript.js"></script>
-
+  <window onload="lastNedJsons()">
   <title>Folk</title>
 </head>
 
