tok med footer og onload, men er usikker på om onload er rett

--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
   <!--linker css og script til html-->
   <link rel="stylesheet" href="../INFO134-eksamen/css/Stylesheet.css">
   <script src="../INFO134-eksamen/Scripts/javascript.js"></script>
-  <window onload="lastNedJsons()">
+ 
   <title>Folk</title>
 </head>
 
@@ -37,6 +37,15 @@
   <div id="sammenligning" class="hidden">
     <p>sammenligning</p>
   </div>
+
+  <footer>
+    <P>
+      Dette er en oppgavebesvarelse i INFO134, Denne oppgaven er besvart av 
+      tre forskjellige personer som alle har jobbet sammen for å lage en god 
+      besvarelse på denne oppgaven.
+    </P>
+  </footer>
+  
 </body>
 
 </html>
