oppdatert med getinfo i konstructøren

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,10 @@
   </nav>
   <!--Delt de fire delene inn i individuelle div, med id og klasse-->
   <div id="introduksjon" class="hidden">
-    <p>introduksjon</p>
+    <p>Dette er en side er du kan se på data om Norges befolkning, Dataen er hentet fra 
+      <a href="https://www.ssb.no" target="_blank">Statistisk sentralbyrå</a>, men ikke direkte, 
+      obs, dataen kan inneholde feil.
+    </p>
   </div>
 
   <div id="oversikt" class="hidden">
@@ -45,7 +48,7 @@
       besvarelse på denne oppgaven.
     </P>
   </footer>
-  
+
 </body>
 
 </html>
