--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,14 @@
 </head>
 
 <body>
-  <!-- Knapper for navigering -->
+  <!-- Knapper for navigering som skuler de divene som ikke er valgt. -->
   <nav>
     <button onclick="introfunk()" id="intro_btn">Introduksjon</button>
     <button onclick="oversiktfunk()" id="oversikt_btn">Oversikt</button>
     <button onclick="detaljfunk()" id="detalj_btn">Detaljer</button>
     <button onclick="sammenfunk()" id="sammenlign_btn">Sammenligning</button>
   </nav>
+
   <!--Delt de fire delene inn i individuelle div, med id og klasse-->
   <div id="introduksjon" class="show">
     <h1>Hei og velkommen til denne siden!</h1>
@@ -39,11 +40,12 @@
   </div>
 
   <div id="sammenligning" class="hidden">
-    <H1>Her kan du sammenligne to komuner</H1>
-    <p>Det du trenger å gjøre er å taste inn komunenummerene til de komunene du ønsker å sammenligne, også trykk sammenlign. </p>
+    <H1>Her kan du sammenligne to kommuner</H1>
+    <p>Det du trenger å gjøre er å taste inn kommunenummerene til de kommunene du ønsker å sammenligne, også trykk sammenlign. </p>
     <button onclick="sammenlign()">Sammenligning</button><input id="kom_nr1"><input type="kom_nr2">
   </div>
 
+  <!--footer med informajson om oppgaven-->
   <footer>
     <P>
       Dette er en oppgavebesvarelse i INFO134, Denne oppgaven er besvart av 
