--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <!-- Knapper for navigering -->
+  <!-- Knapper for navigering som skuler de divene som ikke er valgt. -->
   <nav>
     <button onclick="introfunk()" id="intro_btn">Introduksjon</button>
     <button onclick="oversiktfunk()" id="oversikt_btn">Oversikt</button>
@@ -43,10 +43,13 @@
     </div>
 
     <div id="sammenligning" class="hidden">
-      <p>sammenligning</p>
+        <H1>Her kan du sammenligne to kommuner</H1>
+        <p>Det du trenger å gjøre er å taste inn kommunenummerene til de kommunene du ønsker å sammenligne, også trykk sammenlign. </p>
+        <button onclick="sammenlign()">Sammenligning</button><input id="kom_nr1"><input type="kom_nr2">
     </div>
 
   </div>
+    <!--footer med informajson om oppgaven-->
   <footer>
     <P>
       Dette er en oppgavebesvarelse i INFO134, Denne oppgaven er besvart av 
