--- a/Index.html
+++ b/Index.html
@@ -28,18 +28,19 @@
 
     <!--Delt de fire delene inn i individuelle div, med id og klasse-->
     <div id="introduksjon" class="show">
-      <p>Dette er en side er du kan se på data om Norges befolkning, Dataen er hentet fra
-        <a href="https://www.ssb.no" target="_blank">Statistisk sentralbyrå</a>, men ikke direkte,
-        obs, dataen kan inneholde feil.
-      </p>
+           <h1>Hei og velkommen til denne siden!</h1>
+           <p>Dette er en side er du kan se på data om Norges befolkning, Dataen er hentet fra 
+            <a href="https://www.ssb.no" target="_blank">Statistisk sentralbyrå</a>, men ikke direkte, 
+            obs, dataen kan inneholde feil.
+          </p>
     </div>
 
     <div id="oversikt" class="hidden">
-      <p>oversikt</p>
+      <h1>Her er en oversikt over alle kommunene</h1>
     </div>
 
     <div id="detaljer" class="hidden">
-        <button onclick="getInfo()">Tast inn et komunenummer her for å få ut detaljer om den kommunen</button><input id="kom_nr">
+        <button onclick="getDetaljer()">Tast inn et komunenummer her for å få ut detaljer om den kommunen</button><input id="kom_nr">
     </div>
 
     <div id="sammenligning" class="hidden">
