bare fikset småfeil

--- a/Index.html
+++ b/Index.html
@@ -32,13 +32,13 @@
     <div id="introduksjon" class="show">
       <h1>Hei og velkommen til denne siden!</h1>
       <p>Dette er en side er du kan se på data om Norges befolkning. Dataen er hentet fra
-        <a href="https://www.ssb.no">Statistisk sentralbyrå</a>, men ikke direkte.</p>
+        <a href="https://www.ssb.no" target="_blank">Statistisk sentralbyrå</a>, men ikke direkte.</p>
 
       <p>Vi bruker følgende datasett:</p>
       <ul>
-        <li><a href="http://data.ssb.no/api/v0/dataset/104857?lang=no">Befolkning</a></li>
-        <li><a href="http://data.ssb.no/api/v0/dataset/100145?lang=no">Sysselsatte</a></li>
-        <li><a href="http://data.ssb.no/api/v0/dataset/85432?lang=no">Utdanning</a></li>
+        <li><a href="http://data.ssb.no/api/v0/dataset/104857?lang=no" target="_blank">Befolkning</a></li>
+        <li><a href="http://data.ssb.no/api/v0/dataset/100145?lang=no" target="_blank">Sysselsatte</a></li>
+        <li><a href="http://data.ssb.no/api/v0/dataset/85432?lang=no" target="_blank">Utdanning</a></li>
       </ul>
 
       <p>PS. dataen kan inneholde feil.</p>
