--- a/Index.html
+++ b/Index.html
@@ -66,7 +66,7 @@
      
         <label for="kom_nr1"></label><input id="kom_nr1" placeholder="Kommunenr. 1">
         <label for="kom_nr2"></label><input id="kom_nr2" placeholder="Kommunenr. 2">
-        <button onclick="sammenlign1()">Sammenligning1</button>
+        <button onclick="sammenlign()">Sammenligning</button>
       <div class="info"></div>
     
 
